Only specify line-height on button to avoid clipping input cursor

--- a/scss/foundation/components/_top-bar.scss
+++ b/scss/foundation/components/_top-bar.scss
@@ -398,12 +398,15 @@ $topbar-arrows: true !default; //Set false to remove the triangle icon from the 
 
       input,
       .button {
-        line-height: 2em;
         font-size: em-calc(14);
         height: 2em;
         padding: 0 10px;
         position: relative;
         top: 8px;
+      }
+
+      .button {
+        line-height: 2em;
       }
 
       &.expanded { background: $topbar-bg; }
